Add main css content
addition of main positioning and other css content also fixing minor indentation errors.

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
-box-sizing:
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 *, *::before, *::after {
@@ -7,14 +8,14 @@ box-sizing:
 }
 
 .img-flex {
-;  display: block;
-  width:100%;
+  display: block;
+  width: 100%;
 }
 
 .card {
   overflow: hidden;
   border: 1px solid #ccc;
-  border-radius:0 6px 6px;
+  border-radius: 0 6px 6px;
 }
 
 .card-body {
@@ -22,12 +23,23 @@ box-sizing:
 }
 
 .card-title {
-  margin:0;
+  margin: 0;
   padding: .3rem 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .card-label {
   padding: .3rem 1rem .3rem calc(1rem - 4px);
   border-left: 4px solid green;
   background-color: rgba(255, 255, 255, .6);
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.card-head {
+  position: relative;
 }
